--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = "0.11.0"
+reqwest = "0.9.18"
 file = "1.1.2"
 json = "0.12.4"
 scraper = "0.12.0"
+log = "0.4"
